<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Shortest Tour</string>
    <string name="app_image">TSP Image</string>
    <string name="tsp_description">Find the shortest possible route that visits each
        location exactly once and returns to the origin. </string>
    <string name="tsp_prompt">Create your round trip route.</string>
    <string name="tsp_restart">Press return to start a new game</string>
    <string name="tsp_progress">Computer is working on a route</string>
    <string name="tsp_generate">Computer will generate a route</string>
    <string name="activity_resultinfo">Results</string>
    <string name="route">Route</string>
    <string name="distance">Distance</string>
    <string name="your">Your</string>
    <string name="computer">Computer</string>
    <string name="difference">Difference</string>
    <string name="kms"> kms.</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="india_button">India</string>
    <string name="us_button">US</string>
    <string name="africa_button">Africa</string>
    <string name="europe_button">Europe</string>
    <string name="asia_button">Asia</string>
    <string name="france_button">France</string>
    <string name="uk_button">Great Britain</string>
    <string name="dc_button">Washington D.C.</string>
    <string name="ka_button">Karnataka</string>
    <string name="left">left</string>
    <string name="version">0.3</string>
    <string name="term">Term</string>
    <string name="score">Score</string>
    <string name="description">Description</string>

</resources>
